[package]
name = "shrub-hackathon"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.16"
borsh = "0.10"

[dev-dependencies]
solana-program-test = "1.16"
solana-sdk = "1.16"
tokio = { version = "1.14", features = ["full"] }

[lib]
name = "shrub_hackathon"
crate-type = ["cdylib", "lib"]
path = "src/main.rs"
