[package]
name = "deposit_program"
version = "0.1.0"
edition = "2021"

[lib]
name = "deposit_program"
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18.23"
borsh = "0.9.3"
borsh-derive = "0.9.3"
thiserror = "1.0.30"

[dev-dependencies]
solana-program-test = "1.18.23"
solana-sdk = "1.18.23"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
